--- a/media-source/MediaSource-addSourceBuffer_infinite-calling.html
+++ b/media-source/MediaSource-addSourceBuffer_infinite-calling.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>insertAdjacentHTML</title>
+  <title>Infinite calling MediaSource#addSourceBuffer</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -16,20 +16,25 @@
 var FILE = 'test.webm';
 var video = document.querySelector('video');
 var mime = 'video/webm; codecs="vorbis,vp8"';
-
 async_test(function(t) {
     var mediaSource = new MediaSource();
     mediaSource.addEventListener('sourceopen', function(e){
-        var sourceBuffer = this.addSourceBuffer('video/webm; codecs="vorbis,vp8"');
+        var sourceBuffer = null;
         t.step(function() {
-            assert_not_equals(sourceBuffer.videoTracks, undefined,
-                              'videoTracks should be returned');
+            assert_throws(
+                {name : 'QuotaExceededError'},
+                function() {
+                    while(true) {
+                        sourceBuffer = mediaSource.addSourceBuffer('video/webm; codecs="vorbis,vp8"');
+                    }I
+                },
+                'Create infinite sourceBuffers'
+            );
         });
         t.done();
     }, false);
     video.src = window.URL.createObjectURL(mediaSource);
-}, "MediaSource#removeSouceBuffer : 6. Let SourceBuffer videoTracks list equal the VideoTrackList object returned by sourceBuffer.videoTracks.");
-
+}, "MediaSource#addSourceBuffer : If the user agent can't handle any more SourceBuffer objects then throw a QUOTA_EXCEEDED_ERR exception and abort these steps");
 </script>
 </body>
 </html>
