--- a/media-source/MediaSource-endOfStream_readyState.html
+++ b/media-source/MediaSource-endOfStream_readyState.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
+  <title>readyState attribute not in the "open" state</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -14,9 +15,7 @@ test(function() {
                   function() {
                       mediaSource.endOfStream();
                   });
-    
-}, 'MediaSource#endOfStream : 1. If the readyState attribute is not in the "open" state then throw an INVALID_STATE_ERR exception and abort these steps.');
-
+}, 'MediaSource#endOfStream : If the readyState attribute is not in the "open" state then throw an INVALID_STATE_ERR exception and abort these steps.');
 </script>
 </body>
 </html>
