--- a/media-source/MediaSource-readyState.html
+++ b/media-source/MediaSource-readyState.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>insertAdjacentHTML</title>
+  <title>Initial state of MediaSource#readyState</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
