--- a/media-source/MediaSource-removeSourceBuffer_null.html
+++ b/media-source/MediaSource-removeSourceBuffer_null.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
+  <title>MediaSource#removeSouceBuffer(null)</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -15,19 +16,19 @@
 var FILE = 'test.webm';
 var video = document.querySelector('video');
 var mime = 'video/webm; codecs="vorbis,vp8"';
+
 async_test(function(t) {
     var mediaSource = new MediaSource();
     t.step(function() {
-        assert_throws(
-            {name : 'InvalidStateError'},
-            function() {
-                var sourceBuffer = mediaSource.addSourceBuffer(mime);
-            },
-            'Set invalid duration'
-        );
+        assert_throws({name : 'InvalidAccessError'},
+                      function() {
+                          mediaSource.removeSourceBuffer(null);
+                      },
+                      'Set invalid MIME');
     });
     t.done();
-}, 'MediaSource#addSourceBuffer : 4. If the readyState attribute is not in the "open" state then throw an INVALID_STATE_ERR exception and abort these steps.');
+}, 'MediaSource#removeSouceBuffer : If sourceBuffer is null then throw an INVALID_ACCESS_ERR exception and abort these steps.');
+
 </script>
 </body>
 </html>
