--- a/media-source/MediaSource-removeSourceBuffer_updating.html
+++ b/media-source/MediaSource-removeSourceBuffer_updating.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>insertAdjacentHTML</title>
+  <title>MediaSource#removeSourceBuffer during the updating attribute is true</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -26,33 +26,19 @@ function GET(url, processBody) {
         if (xhr.status != 200) {
             alert("Unexpected status code " + xhr.status + " for " + url);
             return false;
-        }        
+        }
         processBody(new Uint8Array(xhr.response));
     };
 }
 async_test(function(t) {
-    GET(FILE, function(uInt8Array) {
-        var data = new Blob([uInt8Array], {type: 'video/webm'});
-        var chunkNum = 5;
-        var chunkSize = Math.ceil(data.size / chunkNum);
-        var chunkIdx = 0;
+    GET(FILE, function(data) {
         var mediaSource = new MediaSource();
         var events = [];
 
         mediaSource.addEventListener('sourceopen', function(e){
-            //playback 1st chunk
-            var sourceBuffer = this.addSourceBuffer('video/webm; codecs="vorbis,vp8"');
-            var startByte = chunkSize * chunkIdx;
-            var chunk = data.slice(startByte, startByte + chunkSize);
-            var reader = new FileReader();
-            reader.onload = function(e) {
-                var data = new Uint8Array(e.target.result);
-                sourceBuffer.appendBuffer(data);
-                chunkIdx++;
-            };
-            reader.readAsArrayBuffer(chunk);
+            var sourceBuffer = mediaSource.addSourceBuffer(mime);
 
-            sourceBuffer.addEventListener('updatestart', function(e) {                
+            sourceBuffer.addEventListener('updatestart', function(e) {
                 events.push('updatestart');
                 t.step(function() {
                     mediaSource.removeSourceBuffer(sourceBuffer);
@@ -74,15 +60,15 @@ async_test(function(t) {
             sourceBuffer.addEventListener('abort', function(e) {
                 events.push('abort');
             });
+            sourceBuffer.appendBuffer(data);
         }, false);
         video.src = window.URL.createObjectURL(mediaSource);
     });
-}, "MediaSource#removeSourceBuffer : 3. If the sourceBuffer.updating attribute equals true, then run the following steps:" + 
+}, "MediaSource#removeSourceBuffer : If the sourceBuffer.updating attribute equals true, then run the following steps:" + 
      "1. Abort the buffer append and stream append loop algorithms if they are running." +
      "2. Set the sourceBuffer.updating attribute to false." + 
      "3. Queue a task to fire a simple event named abort at sourceBuffer." + 
      "4. Queue a task to fire a simple event named updateend at sourceBuffer.");
-
 </script>
 </body>
 </html>
