--- a/custom-elements/instantiating-custom-elements/custom-element-type-local-name.html
+++ b/custom-elements/instantiating-custom-elements/custom-element-type-local-name.html
@@ -41,7 +41,7 @@ testInIFrame('../resources/x-element.html', function(doc) {
     assert_equals(xelement.constructor.prototype.constructor.name, xelement.localName,
         'Custom element type should be the local name of the custom element');
 }, 'Custom element type is the local name of the custom element. ' +
-    'Custom element created via innerHTML property and the document has browsing context');
+    'Custom element is defined in loaded HTML document');
 </script>
 </body>
 </html>
