--- a/custom-elements/instantiating-custom-elements/prototype-is-interface-prototype-object.html
+++ b/custom-elements/instantiating-custom-elements/prototype-is-interface-prototype-object.html
@@ -15,9 +15,9 @@
 <script type="text/javascript">
 test(function() {
     var doc = newHTMLDocument();
-    HTML5_ELEMENTS.forEach(function(element) {
-        var obj = doc.createElement(element);
-        var name = 'x-a-' + element;
+    HTML5_ELEMENTS.forEach(function(tagName) {
+        var obj = doc.createElement(tagName);
+        var name = 'x-a-' + tagName;
         assert_throws('NotSupportedError', function() {
             doc.registerElement(name, {prototype: obj.constructor.prototype});
         }, 'Exception should be thrown in case of attempt to register element ' +
