--- a/websockets/unload-a-document/002-1.html
+++ b/websockets/unload-a-document/002-1.html
@@ -6,18 +6,17 @@ var controller = opener || parent;
 var t = controller.t;
 var assert_equals = controller.asset_equals;
 var assert_unreached = controller.assert_unreached ;
+t.add_cleanup(function() {delete sessionStorage.second_run;});
 t.step(function() {
   // this test can fail if the document is unloaded on navigation e.g. due to OOM
   if (sessionStorage.second_run) {
-    delete sessionStorage.second_run;
     assert_unreached('document was discarded');
   } else {
     sessionStorage.second_run = 'true';
     var ws = new WebSocket(SCHEME_AND_DOMAIN+'/echo');
     ws.onopen = t.step_func(function(e) {
-      
+
       setTimeout(t.step_func(function() {
-        delete sessionStorage.second_run;
         assert_equals(ws.readyState, ws.CLOSED, 'ws.readyState');
         t.done();
       }), 4000);
@@ -26,7 +25,7 @@ t.step(function() {
         controller.navigate();
       });
     })
-    ws.onerror = ws.onmessage = ws.onclose = t.step_func(function() {assert_unreached()});
+    ws.onerror = ws.onmessage = ws.onclose = t.step_func(function(e) {assert_unreached("Got unexpected event " + e.type)});
   }
 });
 </script>
