--- a/media-source/SourceBuffer-abort.html
+++ b/media-source/SourceBuffer-abort.html
@@ -16,7 +16,21 @@
 var video = document.querySelector('video');
 var mime = 'video/webm; codecs="vorbis,vp8"';
 
+//check the browser supports the MIME used in this test
+function canPlayType(mime) {    
+    if(video.canPlayType(mime) != 'probably') {
+        this.step(function() {
+            assert_unreached("Browser doesn't support the MIME used in this test.");
+        });
+        this.done();
+        return false;
+    }
+    return true;
+}
 async_test(function(t) {
+    if(!canPlayType.bind(t)(mime)) {
+        return;
+    }
     var mediaSource = new MediaSource();
     mediaSource.addEventListener('sourceopen', function(e){
         var sourceBuffer = mediaSource.addSourceBuffer(mime);
